--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "license": "ISC",
     "dependencies": {
       "cors": "^2.8.5",
-      "json-server": "^0.17.3",
-      "nude": "^42.11.0"
+      "json-server": "^0.17.3"
     }
   }
   
